package han.triptop.backend.adapter;

public class BookingAdapter {
}
