package han.triptop.backend.state;

public interface BookingState {
}
