package han.triptop.backend.state;

public class CarBookingState {
}
