package han.triptop.backend.state;

public class FlightBookingState {
}
